--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -116,6 +116,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+	<data name="Menu_Donate" xml:space="preserve">
+		<value>Donate &amp; Remove Ads</value>
+	</data>
+	<data name="Menu_Restart" xml:space="preserve">
+		<value>Restart</value>
+	</data>
+	<data name="Menu_Resume" xml:space="preserve">
+		<value>Resume</value>
+	</data>
+	<data name="Menu_Thanks" xml:space="preserve">
+		<value>Thank you!</value>
+	</data>
+	<data name="Menu_Title" xml:space="preserve">
+		<value>Menu</value>
+	</data>
 	<data name="MissionGoal" xml:space="preserve">
 		<value>Mine</value>
 	</data>
