--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.ru.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.ru.resx
@@ -116,6 +116,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+	<data name="Menu_Donate" xml:space="preserve">
+		<value>Убрать рекламу</value>
+	</data>
+	<data name="Menu_Restart" xml:space="preserve">
+		<value>Сначала</value>
+	</data>
+	<data name="Menu_Resume" xml:space="preserve">
+		<value>Продолжить</value>
+	</data>
+	<data name="Menu_Thanks" xml:space="preserve">
+		<value>Спасибо!</value>
+	</data>
+	<data name="Menu_Title" xml:space="preserve">
+		<value>Меню</value>
+	</data>
 	<data name="MissionGoal" xml:space="preserve">
 		<value>Добыть</value>
 	</data>
