--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -131,11 +131,23 @@
 	<data name="Menu_Title" xml:space="preserve">
 		<value>Menu</value>
 	</data>
+	<data name="MissionCongratulations" xml:space="preserve">
+		<value>Congratulations!</value>
+	</data>
+	<data name="MissionFailed" xml:space="preserve">
+		<value>Mission failed</value>
+	</data>
 	<data name="MissionGoal" xml:space="preserve">
 		<value>Mine</value>
 	</data>
 	<data name="MissionNameTitle" xml:space="preserve">
 		<value>Mission</value>
+	</data>
+	<data name="MissionNext" xml:space="preserve">
+		<value>Next mission</value>
+	</data>
+	<data name="MissionRetry" xml:space="preserve">
+		<value>Retry</value>
 	</data>
 	<data name="MissionStartButton" xml:space="preserve">
 		<value>Start</value>
