--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -159,9 +159,9 @@
 		<value>Wait for the production of a red mineral and a green mineral</value>
 	</data>
 	<data name="Tutorial_2" xml:space="preserve">
-		<value>To send the spaceship tap to the red planet</value>
+		<value>Tap to the red planet</value>
 	</data>
 	<data name="Tutorial_3" xml:space="preserve">
-		<value>Now drag finger to the green planet</value>
+		<value>To send the spaceship drag finger to the green planet</value>
 	</data>
 </root>
