--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -116,6 +116,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+	<data name="Help_1" xml:space="preserve">
+		<value>1) Wait for the minerals production </value>
+	</data>
+	<data name="Help_2" xml:space="preserve">
+		<value>2) Tap and drag to send a spaceship</value>
+	</data>
+	<data name="Help_Formulas" xml:space="preserve">
+		<value>Formulas</value>
+	</data>
 	<data name="Menu_Donate" xml:space="preserve">
 		<value>Donate &amp; Remove Ads</value>
 	</data>
