--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.ru.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.ru.resx
@@ -116,6 +116,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+	<data name="Help_1" xml:space="preserve">
+		<value>1) Дождитесь производства минералов</value>
+	</data>
+	<data name="Help_2" xml:space="preserve">
+		<value>2) Коснитесь и потяните для отправки корабля</value>
+	</data>
+	<data name="Help_Formulas" xml:space="preserve">
+		<value>Формулы</value>
+	</data>
 	<data name="Menu_Donate" xml:space="preserve">
 		<value>Убрать рекламу</value>
 	</data>
