--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -173,4 +173,7 @@
 	<data name="Tutorial_3" xml:space="preserve">
 		<value>To send the spaceship drag finger to the green planet</value>
 	</data>
+	<data name="Tutorial_Pirate" xml:space="preserve">
+		<value>Tap to destroy a pirate</value>
+	</data>
 </root>
