--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.es.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.es.resx
@@ -173,4 +173,7 @@
 	<data name="Tutorial_3" xml:space="preserve">
 		<value>Para enviar la nave espacial arrastrar dedo al planeta verde</value>
 	</data>
+	<data name="Tutorial_Pirate" xml:space="preserve">
+		<value>Toque para destruir a un pirata</value>
+	</data>
 </root>
