--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
@@ -116,6 +116,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+	<data name="Help_1" xml:space="preserve">
+		<value />
+	</data>
+	<data name="Help_2" xml:space="preserve">
+		<value />
+	</data>
+	<data name="Help_Formulas" xml:space="preserve">
+		<value />
+	</data>
 	<data name="Menu_Donate" xml:space="preserve">
 		<value />
 	</data>
@@ -164,13 +173,7 @@
 	<data name="Tutorial_3" xml:space="preserve">
 		<value />
 	</data>
-	<data name="Help_1" xml:space="preserve">
-		<value />
-	</data>
-	<data name="Help_2" xml:space="preserve">
-		<value />
-	</data>
-	<data name="Help_Formulas" xml:space="preserve">
+	<data name="Tutorial_Pirate" xml:space="preserve">
 		<value />
 	</data>
 </root>
