--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.ru.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.ru.resx
@@ -173,4 +173,7 @@
 	<data name="Tutorial_3" xml:space="preserve">
 		<value>Для отправки корабля потяните палец к зеленой планете</value>
 	</data>
+	<data name="Tutorial_Pirate" xml:space="preserve">
+		<value>Нажмите на пирата, чтобы его уничтожить</value>
+	</data>
 </root>
